Feat: begin adding article content, center text

--- a/index.html
+++ b/index.html
@@ -13,16 +13,118 @@
 </head>
 <body>
   <nav>
-    <ul class='nav'>
+    <ul class='nav justify-content-center'>
       <li>
         <h1 class='page-title'>Irish Whistles</h1>
       </li>
-      <li>
-        <button class='toggle-button' onclick='toggleMode()'>Color</button>
-      </li>
     </ul>
-    </ul>
+    <li class='toggle-button-li'>
+      <button class='toggle-button' onclick='toggleMode()'>Color</button>
+    </li>
   </nav>
+  <h2 class='section-0'>
+    Introduction
+  </h2>
+  <p>
+    Hello there. Glad you dropped in. I'm guessing you are curious
+    <br>
+    what this page is about. Maybe you've never heard of Irish Whistles
+    <br>
+    before, or maybe you have. Either way, hopefully you'll leave this
+    <br>
+    page a bit more informed than when you came. But before you read, 
+    <br>
+    let me explain my why. I personally play a Low Whistle, and love it,
+    <br>
+    and think more people should know and love them too. So, now on to 
+    <br>
+    the actual content. 
+  </p>
+  <h2 class='section-1'>
+    The Irish Flute
+  </h2>
+  <p>
+    Let us start off by talking about something that isn't an Irish Whistle
+    <br>
+    at all. The Irish Flute. Before you raise your eyebrow, let me explain. 
+    <br>
+    The Irish Flute, very similar to the Irish Low Whistle, is oftentimes
+    <br>
+    mistaken for the Irish Low Whistle. Aside from the fact that you play the Irish 
+    <br>
+    Flute sideways and the Irish Whistle straight up and down, I suppose that is
+    <br>
+    an understandable mistake. Here is a picture of the instrument in question.
+    <br>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e1/Irish_Flute_keyless.jpg/80px-Irish_Flute_keyless.jpg">
+    <br>
+    Allow me to quote Wikipedia. 'Despite the implication of this commonly
+    <br>
+    used name, the Irish flute is not an instrument indigenous to Ireland.
+    <br>
+    The simple system, conical-bore flute is what people played before the
+    <br>
+    advent of the modern, Boehm system, Western concert flute in the mid-19th
+    <br>
+    century. Simple-system flutes are usually made of wood (cocus, grenadilla
+    <br>
+    (African blackwood), rosewood, ebony, etc.). There were several manufacturers
+    <br>
+    of this type of flute, among whom was English inventor and flautist Charles
+    <br>
+    Nicholson Jr, who developed a radically improved version of the transverse
+    <br>
+    wooden flute.'
+    <br>
+    If you wish for a more detailed, technical explanation of the instrument, I suggest 
+    <br>
+    you go read the Wikipedia article. My sources will be listed at the bottom. Anyways,
+    <br>
+    so in sound the Irish Flute sounds pretty cool, like a smoother more controlled version
+    <br>
+    of an actual flute. Actually, after hearing the Irish Flute, I have a really hard time
+    <br>
+    listening to a normal flute because the ones I've heard sound so much more jerky and uncontrolled
+    <br>
+    than an Irish Flute does. 
+    <br>
+    It also sounds very similar to an Irish Whistle, and as I mentioned earlier in this article, 
+    <br>
+    very often the two are mistaken for each other by uninformed people. 
+    <br>
+  </p>
+  <h2 class='section-2'>
+    The Tin Whistle
+  </h2>
+  <p>
+    I know what you are thinking. First we talk about flutes, now what's this about tin whistles?
+    <br>
+    Well, tin whistles are important for this article because Low Whistles are a variation of
+    <br>
+    tin whistles, so we need to talk about tin whistles first.
+    <br>
+    Allow me to once again quote the learned Wikipedia(who knows more than I ever will).
+    <br>
+    'The tin whistle, also called the penny whistle, flageolet, English flageolet, Scottish penny
+    <br>
+    whistle, tin flageolet, Irish whistle, Belfast Hornpipe, feadóg stáin (or simply feadóg) and
+    <br>
+    Clarke London Flageolet is a simple, six-holed woodwind instrument. It is a type of fipple flute,
+    <br>
+    putting it in the same class as the recorder, Native American flute, and other woodwind instruments
+    <br>
+    that meet such criteria. A tin whistle player is called a whistler. The tin whistle is closely
+    <br>
+    associated with Celtic and Australian folk music.'
+    <br>
+    Here is a picture of the small instrument. 
+    <br>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Tin_Whistles.jpg/500px-Tin_Whistles.jpg">
+    <br>
+    So, tin whistles have a high, kind of piercing sound, depending on how you are playing it. Good for Celtic
+    <br>
+    folk music. 
+  </p>
   <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous'></script>
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous'></script>
