Feat: add rest of content, links

--- a/index.html
+++ b/index.html
@@ -125,6 +125,56 @@
     <br>
     folk music. 
   </p>
+  <h2 class='section-3'>
+    The Low Whistle
+  </h2>
+  <p>
+    At last, here we are. The Low Whistle. Now, the Low Whistle is really an interesting kind of
+    <br>
+    instrument. With its deep, haunting sound, it's really unlike most wind instruments I've heard.
+    <br>
+    Naturally, it's perfect for Celtic music, and honestly I think once a person hears it, they
+    <br>
+    love it. At least, if that person is anything like me. Here is a picture of this facinating
+    <br>
+    instrument. 
+    <br>
+    <img src='https://m.media-amazon.com/images/I/21lx+pIcE-L._AC_SS350_.jpg'>
+    <br>
+    It might not look like much from the picture, but go look up videos of someone playing one. It's awesome.
+    <br>
+    Here is the obligatory quote from Wikipedia. 'The low whistle, or concert whistle, is a variation of the
+    <br>
+    traditional tin whistle/pennywhistle, distinguished by its lower pitch and larger size. It is most closely
+    <br>
+    associated with the performances of British and Irish artists such as Finbar Furey and his son Martin Furey,
+    <br>
+    Old Blind Dogs, Michael McGoldrick, Riverdance, Lunasa, Donie Keyes and Davy Spillane, and is increasingly
+    <br>
+    accepted as a feature of Celtic music. The low whistle is often used for the playing of airs and slow melodies
+    <br>
+    due to its haunting and delicate sound. However, it is also becoming used more often for the playing of jigs,
+    <br>
+    reels and hornpipes from the Irish, Scottish, Manx, Welsh and English traditions.'
+    <br>
+  </p>
+  <h2 class='section-4'>
+    End
+  </h2>
+  <p>
+    Well, here we are. The end. Well that was short, I can see you saying. Sorry, there's only so much
+    <br>
+    one can say, or only so much you can quote from Wikipedia. At some point, some things require your own
+    <br>
+    investigation. It's true of the Low Whistle, and it's true of life in general. And with that bit of
+    <br>
+    sage advice, I leave you to go explore on your own. Happy whistling my friend. 
+  </p>
+  <section class='footnotes'>
+    <a href='https://en.wikipedia.org/wiki/Irish_flute'>Irish Flute</a>
+    <a href='https://en.wikipedia.org/wiki/Tin_whistle'>Tin Whistle</a>
+    <a href='https://en.wikipedia.org/wiki/Low_whistle'>Low Whistle</a>
+  </section>
   <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous'></script>
   <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js' integrity='sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM' crossorigin='anonymous'></script>
