--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
       </li>
     </ul>
     <li class='toggle-button-li'>
-      <button class='toggle-button' onclick='toggleMode()'>Color</button>
+      <button class='toggle-button' onclick='toggleMode()'>Theme</button>
     </li>
   </nav>
-  <h2 class='section-0'>
+  <a href='#section-0' class='headers'>
+   <h2 class='section-0'>
     Introduction
-  </h2>
+   </h2>
+  </a>
   <p>
     Hello there. Glad you dropped in. I'm guessing you are curious
     <br>
@@ -40,9 +42,11 @@
     <br>
     the actual content. 
   </p>
-  <h2 class='section-1'>
+  <a href='#section-1' class='headers'>
+    <h2 class='section-1'>
     The Irish Flute
-  </h2>
+    </h2>
+  </a>
   <p>
     Let us start off by talking about something that isn't an Irish Whistle
     <br>
@@ -93,9 +97,11 @@
     very often the two are mistaken for each other by uninformed people. 
     <br>
   </p>
-  <h2 class='section-2'>
+  <a href='#section-2' class='headers'>
+    <h2 class='section-2'>
     The Tin Whistle
-  </h2>
+    </h2>
+  </a>
   <p>
     I know what you are thinking. First we talk about flutes, now what's this about tin whistles?
     <br>
@@ -125,9 +131,11 @@
     <br>
     folk music. 
   </p>
-  <h2 class='section-3'>
+  <a href='#section-3' class='headers'>
+    <h2 class='section-3'>
     The Low Whistle
-  </h2>
+    </h2>
+  </a>  
   <p>
     At last, here we are. The Low Whistle. Now, the Low Whistle is really an interesting kind of
     <br>
@@ -158,9 +166,11 @@
     reels and hornpipes from the Irish, Scottish, Manx, Welsh and English traditions.'
     <br>
   </p>
-  <h2 class='section-4'>
+  <a href='#section-4' class='headers'>
+   <h2 class='section-4'>
     End
-  </h2>
+   </h2>
+  </a>
   <p>
     Well, here we are. The end. Well that was short, I can see you saying. Sorry, there's only so much
     <br>
@@ -171,9 +181,9 @@
     sage advice, I leave you to go explore on your own. Happy whistling my friend. 
   </p>
   <section class='footnotes'>
-    <a href='https://en.wikipedia.org/wiki/Irish_flute'>Irish Flute</a>
-    <a href='https://en.wikipedia.org/wiki/Tin_whistle'>Tin Whistle</a>
-    <a href='https://en.wikipedia.org/wiki/Low_whistle'>Low Whistle</a>
+    <a href='https://en.wikipedia.org/wiki/Irish_flute' class='links'>Irish Flute</a>
+    <a href='https://en.wikipedia.org/wiki/Tin_whistle'class='links' >Tin Whistle</a>
+    <a href='https://en.wikipedia.org/wiki/Low_whistle' class='links'>Low Whistle</a>
   </section>
   <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous'></script>
