Refactor: format for more consistency

--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <meta name='author' content='Anna Cobb'>
   <meta name='description' content='A site detailing info about Irish Whistles'>
-  <link href='styles.css' rel='stylesheet'>
-  <link rel='preconnect' href='https://fonts.gstatic.com'>
-  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' crossorigin='anonymous'>
-  <link href='https://fonts.googleapis.com/css2?family=Calligraffitti&family=Open+Sans&display=swap' rel='stylesheet'>  
+  <link 
+    href='styles.css' 
+    rel='stylesheet'>
+  <link 
+    rel='preconnect' 
+    href='https://fonts.gstatic.com'>
+  <link 
+    rel='stylesheet' 
+    href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css' 
+    integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T' 
+    crossorigin='anonymous'>
+  <link 
+    href='https://fonts.googleapis.com/css2?family=Calligraffitti&family=Open+Sans&display=swap' 
+    rel='stylesheet'>  
 </head>
 <body>
   <nav>
@@ -171,9 +181,23 @@
     sage advice, I leave you to go explore on your own. Happy whistling my friend. 
   </p>
   <section class='footnotes'>
-    <a href='https://en.wikipedia.org/wiki/Irish_flute' class='links'>Irish Flute</a>
-    <a href='https://en.wikipedia.org/wiki/Tin_whistle'class='links' >Tin Whistle</a>
-    <a href='https://en.wikipedia.org/wiki/Low_whistle' class='links'>Low Whistle</a>
+    <a 
+      href='https://en.wikipedia.org/wiki/Irish_flute' 
+      class='links'>
+      Irish Flute
+    </a>
+    <a 
+      href='https://en.wikipedia.org/wiki/Tin_whistle'
+      class='links' 
+    >
+      Tin Whistle
+    </a>
+    <a 
+      href='https://en.wikipedia.org/wiki/Low_whistle' 
+      class='links'
+    >
+      Low Whistle
+    </a>
   </section>
   <script src='https://code.jquery.com/jquery-3.3.1.slim.min.js' integrity='sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo' crossorigin='anonymous'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js' integrity='sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1' crossorigin='anonymous'></script>
